# zacor

./: .gitignore  Cargo.toml  install.ps1  justfile
.cargo/: config.toml
.github/workflows/: release.yml
crates/zacor/: Cargo.toml
crates/zacor-host/: Cargo.toml
crates/zacor-host/src/: capability.rs  lib.rs  router.rs  session.rs
crates/zacor-package/: Cargo.toml
crates/zacor-package-build/: Cargo.toml
crates/zacor-package-build/src/: lib.rs
crates/zacor-package/src/: data.rs  input.rs  lib.rs  parse.rs  protocol.rs  render.rs  run.rs  runtime.rs  skills.rs
crates/zacor-package/src/io/: fs.rs  http.rs  mod.rs  progress.rs  prompt.rs
crates/zacor-protocol/: Cargo.toml
crates/zacor-protocol/src/: lib.rs
crates/zacor/docs/: idea.md
crates/zacor/src/: capability_provider.rs  config.rs  daemon.rs  daemon_client.rs  deps.rs  error.rs  execute.rs  job_object.rs  lib.rs  main.rs  package_definition.rs  paths.rs  platform.rs  receipt.rs  registry.rs  render.rs  serve.rs  store.rs  test_util.rs  wasm_manifest.rs  wasm_runtime.rs
crates/zacor/src/cli/: config_cmd.rs  disable.rs  enable.rs  init.rs  install.rs  list.rs  mod.rs  registry_cmd.rs  remove.rs  update.rs  use_cmd.rs  zacor.rs  zr.rs
crates/zacor/src/dispatch/: clap_builder.rs  mod.rs  session.rs
crates/zacor/src/source/: github.rs  gitrepo.rs  local.rs  mod.rs
crates/zacor/tests/: integration.rs
crates/zr/: Cargo.toml
crates/zr-client/: Cargo.toml
crates/zr-client/src/: main.rs
crates/zr-daemon/: Cargo.toml
crates/zr-daemon/src/: main.rs
crates/zr-dispatch/: Cargo.toml
crates/zr-dispatch/src/: daemon_client.rs  execute.rs  job_object.rs  lib.rs  render.rs
crates/zr-dispatch/src/dispatch/: clap_builder.rs  mod.rs  session.rs
crates/zr-dispatch/src/providers/: clipboard.rs  http_forwarder.rs  subprocess.rs
crates/zr-expr/: Cargo.toml
crates/zr-expr/src/: eval.rs  lexer.rs  lib.rs  parser.rs
crates/zr/src/: daemon_client.rs  main.rs
crates/zr/src/daemon/: capability_router.rs  dispatch.rs  idle.rs  mod.rs  module_cache.rs  protocol.rs  server.rs  tests.rs
crates/zr/src/daemon/capability_router/: http.rs
crates/zr/src/daemon/service_supervisor/: mod.rs  subprocess.rs  wasm.rs
crates/zr/src/providers/: clipboard.rs  fs.rs  http_forwarder.rs  mod.rs  prompt.rs  subprocess.rs
crates/zr/tests/: daemon_drain.rs
crates/zred/: Cargo.toml
crates/zred/src/: app.rs  app_tests.rs  main.rs  runtime.rs  shell.rs
crates/zred/src/frontends/: mod.rs
crates/zred/src/frontends/native/: app.rs  compositor.rs  input.rs  mod.rs  scene.rs  surface.rs  window.rs
crates/zred/src/frontends/tui/: events.rs  input.rs  mod.rs  render.rs  terminal.rs
crates/zred/src/kernel/: buffer.rs  capability.rs  ids.rs  job.rs  keymap.rs  messages.rs  minibuffer.rs  mod.rs  pane.rs  pane_tree.rs  selection.rs
crates/zred/src/kernel/command/: dispatch.rs  metadata.rs  mod.rs  parse.rs  registry.rs  tests.rs  types.rs
crates/zred/src/kernel/workspace/: buffers.rs  commands.rs  mod.rs  snapshot.rs
crates/zred/src/lua/: api.rs  init.rs  mod.rs
crates/zred/src/session/: commands.rs  core.rs  input.rs  lua.rs  minibuffer.rs  mod.rs  runtime.rs  view.rs
crates/zred/src/ui/: buffer.rs  minibuffer.rs  mod.rs  render.rs  window.rs
scripts/: bootstrap-wasi-sdk.ps1  bootstrap-wasi-sdk.sh
