[package]
name = "zacor-host"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared zacor host runtime library"

[features]
testing = []

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
serde.workspace = true
serde_json.workspace = true
serde_yml = "0.0.12"
semver = "1"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
thiserror = "1"
wasmparser = "0.221"
wasmtime = { version = "28", default-features = false, features = ["cranelift", "runtime", "parallel-compilation"] }
wasmtime-wasi = "28"
zacor-protocol.workspace = true

[dev-dependencies]
zacor-package.workspace = true
