[package]
name = "zacor-package-build"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Build-time code generation for zacor packages"

[dependencies]
serde_json = "1"
pathdiff = "0.2"
zacor-package = { path = "../zacor-package" }

[dev-dependencies]
tempfile = "3"
