[package]
name = "zacor-package"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Package SDK for zacor/zr — format detection, output helpers, and serde_json re-export"

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
regex = "1"
data-encoding = "2"

[dev-dependencies]
tempfile = "3"
