[package]
name = "zacor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors = ["zacalot"]
repository.workspace = true
description = "Package manager for zr — install, manage, and configure packages"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "string"] }
clap_complete = "4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"

# Version comparison
semver = "1"

# Config file
toml = "0.8"

# Invoke template tokenization
shlex = "1"

# Platform paths
dirs = "6"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }
timeago = "0.4"

# Formatting


# HTTP (GitHub API)
reqwest = { version = "0.12", features = ["rustls-tls", "json", "blocking"] }

# Archives
flate2 = "1"
tar = "0.4"
zip = "2"

# Checksums
sha2 = "0.10"

# Binary discovery
which = "7"

# Error handling
anyhow = "1"

# Temp directories
tempfile = "3"
thiserror = "1"

# Async runtime + web server
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8" }
futures-core = "0.3"

# Protocol types (shared with SDK)
zacor-package.workspace = true
zacor-host = { workspace = true, features = ["testing"] }
