[package]
name = "zr"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Dispatcher and wasm host runtime for zacor packages"

[dependencies]
anyhow = "1"
arboard = "3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "string"] }
comfy-table = "7"
humansize = "2"
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
serde_yml = "0.0.12"
shlex = "1"
tempfile = "3"
thiserror = "1"
timeago = "0.4"
tokio = { version = "1", features = ["full"] }
zacor-host = { workspace = true, features = ["testing"] }
zacor-package.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_System_JobObjects",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
] }
