[package]
name = "zred"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal editor foundation for zacor"

[dependencies]
anyhow = "1"
crossterm = "0.28"
dirs = "6"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
ratatui = "0.29"
serde_json.workspace = true
zacor-host.workspace = true
